// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED.

syntax = "proto3";

package OpenAPIv2;

message AdditionalPropertiesItem {
  Schema schema = 1;
  bool boolean = 2;
}

message Any {
  string value = 1;
}

message ApiKeySecurity {
  string name = 1;
  string in = 2;
  string description = 3;
  string type = 4;
  map<string, Any> vendor_extension = 5;
}

message BasicAuthenticationSecurity {
  string description = 1;
  string type = 2;
  map<string, Any> vendor_extension = 3;
}

message BodyParameter {
  Schema schema = 1;
  string description = 2;
  string name = 3;
  string in = 4;
  bool required = 5;
  map<string, Any> vendor_extension = 6;
}

message Contact {
  string name = 1;
  string url = 2;
  string email = 3;
  map<string, Any> vendor_extension = 4;
}

message Default {
  map<string, Any> additional_properties = 1;
}

message Definitions {
  map<string, Schema> additional_properties = 1;
}

message Document {
  Definitions definitions = 1;
  repeated SecurityRequirement security = 2;
  string host = 3;
  ParameterDefinitions parameters = 4;
  ResponseDefinitions responses = 5;
  repeated string produces = 6;
  SecurityDefinitions security_definitions = 7;
  string swagger = 8;
  repeated string consumes = 9;
  Paths paths = 10;
  string base_path = 11;
  repeated string schemes = 12;
  repeated Tag tags = 13;
  ExternalDocs external_docs = 14;
  Info info = 15;
}

message Examples {
  map<string, Any> additional_properties = 1;
}

message ExternalDocs {
  string url = 1;
  string description = 2;
  map<string, Any> vendor_extension = 3;
}

message FileSchema {
  bool read_only = 1;
  Any example = 2;
  Any default = 3;
  ExternalDocs external_docs = 4;
  string type = 5;
  repeated string required = 6;
  string format = 7;
  string title = 8;
  string description = 9;
  map<string, Any> vendor_extension = 10;
}

message FormDataParameterSubSchema {
  string collection_format = 1;
  Any default = 2;
  repeated Any enum = 3;
  string in = 4;
  bool unique_items = 5;
  string description = 6;
  bool allow_empty_value = 7;
  PrimitivesItems items = 8;
  bool exclusive_minimum = 9;
  string pattern = 10;
  string format = 11;
  string name = 12;
  double multiple_of = 13;
  double minimum = 14;
  double maximum = 15;
  int64 min_length = 16;
  string type = 17;
  int64 max_items = 18;
  bool required = 19;
  bool exclusive_maximum = 20;
  int64 max_length = 21;
  int64 min_items = 22;
  map<string, Any> vendor_extension = 23;
}

message Header {
  int64 min_length = 1;
  double multiple_of = 2;
  int64 max_length = 3;
  string description = 4;
  PrimitivesItems items = 5;
  string collection_format = 6;
  string type = 7;
  int64 min_items = 8;
  bool exclusive_minimum = 9;
  int64 max_items = 10;
  string pattern = 11;
  bool exclusive_maximum = 12;
  bool unique_items = 13;
  Any default = 14;
  string format = 15;
  double minimum = 16;
  double maximum = 17;
  repeated Any enum = 18;
  map<string, Any> vendor_extension = 19;
}

message HeaderParameterSubSchema {
  repeated Any enum = 1;
  PrimitivesItems items = 2;
  string description = 3;
  string collection_format = 4;
  int64 min_items = 5;
  bool required = 6;
  bool exclusive_minimum = 7;
  double multiple_of = 8;
  string format = 9;
  bool exclusive_maximum = 10;
  int64 max_items = 11;
  int64 max_length = 12;
  Any default = 13;
  int64 min_length = 14;
  string in = 15;
  double maximum = 16;
  string name = 17;
  string pattern = 18;
  double minimum = 19;
  bool unique_items = 20;
  string type = 21;
  map<string, Any> vendor_extension = 22;
}

message Headers {
  map<string, Header> additional_properties = 1;
}

message Info {
  string terms_of_service = 1;
  Contact contact = 2;
  License license = 3;
  string title = 4;
  string version = 5;
  string description = 6;
  map<string, Any> vendor_extension = 7;
}

message ItemsItem {
  repeated Schema schema = 1;
}

message JsonReference {
  string _ref = 1;
}

message License {
  string name = 1;
  string url = 2;
  map<string, Any> vendor_extension = 3;
}

message NonBodyParameter {
  oneof oneof {
    HeaderParameterSubSchema header_parameter_sub_schema = 1;
    FormDataParameterSubSchema form_data_parameter_sub_schema = 2;
    QueryParameterSubSchema query_parameter_sub_schema = 3;
    PathParameterSubSchema path_parameter_sub_schema = 4;
  }
}

message Oauth2AccessCodeSecurity {
  Oauth2Scopes scopes = 1;
  string authorization_url = 2;
  string token_url = 3;
  string description = 4;
  string type = 5;
  string flow = 6;
  map<string, Any> vendor_extension = 7;
}

message Oauth2ApplicationSecurity {
  string type = 1;
  string flow = 2;
  Oauth2Scopes scopes = 3;
  string token_url = 4;
  string description = 5;
  map<string, Any> vendor_extension = 6;
}

message Oauth2ImplicitSecurity {
  string type = 1;
  string flow = 2;
  Oauth2Scopes scopes = 3;
  string authorization_url = 4;
  string description = 5;
  map<string, Any> vendor_extension = 6;
}

message Oauth2PasswordSecurity {
  string token_url = 1;
  string description = 2;
  string type = 3;
  string flow = 4;
  Oauth2Scopes scopes = 5;
  map<string, Any> vendor_extension = 6;
}

message Oauth2Scopes {
  map<string, string> additional_properties = 1;
}

message Operation {
  repeated string tags = 1;
  string summary = 2;
  string description = 3;
  string operation_id = 4;
  bool deprecated = 5;
  repeated ParametersItem parameters = 6;
  Responses responses = 7;
  repeated string consumes = 8;
  repeated string schemes = 9;
  repeated SecurityRequirement security = 10;
  ExternalDocs external_docs = 11;
  repeated string produces = 12;
  map<string, Any> vendor_extension = 13;
}

message Parameter {
  oneof oneof {
    BodyParameter body_parameter = 1;
    NonBodyParameter non_body_parameter = 2;
  }
}

message ParameterDefinitions {
  map<string, Parameter> additional_properties = 1;
}

message ParametersItem {
  oneof oneof {
    Parameter parameter = 1;
    JsonReference json_reference = 2;
  }
}

message PathItem {
  Operation get = 1;
  Operation delete = 2;
  Operation put = 3;
  Operation post = 4;
  Operation options = 5;
  string _ref = 6;
  Operation head = 7;
  repeated ParametersItem parameters = 8;
  Operation patch = 9;
  map<string, Any> vendor_extension = 10;
}

message PathParameterSubSchema {
  string name = 1;
  string description = 2;
  bool required = 3;
  string collection_format = 4;
  bool exclusive_maximum = 5;
  bool exclusive_minimum = 6;
  double minimum = 7;
  int64 min_items = 8;
  Any default = 9;
  PrimitivesItems items = 10;
  int64 min_length = 11;
  string type = 12;
  int64 max_length = 13;
  int64 max_items = 14;
  double maximum = 15;
  string pattern = 16;
  double multiple_of = 17;
  string format = 18;
  bool unique_items = 19;
  repeated Any enum = 20;
  string in = 21;
  map<string, Any> vendor_extension = 22;
}

message Paths {
  map<string, Any> vendor_extension = 1;
  map<string, PathItem> path = 2;
}

message PrimitivesItems {
  bool exclusive_minimum = 1;
  int64 min_length = 2;
  string format = 3;
  int64 max_items = 4;
  int64 min_items = 5;
  Any default = 6;
  repeated Any enum = 7;
  PrimitivesItems items = 8;
  double minimum = 9;
  double multiple_of = 10;
  int64 max_length = 11;
  string type = 12;
  bool unique_items = 13;
  double maximum = 14;
  string pattern = 15;
  bool exclusive_maximum = 16;
  string collection_format = 17;
  map<string, Any> vendor_extension = 18;
}

message Properties {
  map<string, Schema> additional_properties = 1;
}

message QueryParameterSubSchema {
  repeated Any enum = 1;
  PrimitivesItems items = 2;
  string in = 3;
  bool exclusive_minimum = 4;
  int64 max_length = 5;
  int64 min_items = 6;
  bool exclusive_maximum = 7;
  Any default = 8;
  int64 min_length = 9;
  string name = 10;
  double multiple_of = 11;
  string description = 12;
  bool allow_empty_value = 13;
  bool unique_items = 14;
  string format = 15;
  double minimum = 16;
  string collection_format = 17;
  double maximum = 18;
  string pattern = 19;
  string type = 20;
  int64 max_items = 21;
  bool required = 22;
  map<string, Any> vendor_extension = 23;
}

message Response {
  Examples examples = 1;
  string description = 2;
  SchemaItem schema = 3;
  Headers headers = 4;
  map<string, Any> vendor_extension = 5;
}

message ResponseDefinitions {
  map<string, Response> additional_properties = 1;
}

message ResponseValue {
  oneof oneof {
    Response response = 1;
    JsonReference json_reference = 2;
  }
}

message Responses {
  map<string, ResponseValue> response_code = 1;
  map<string, Any> vendor_extension = 2;
}

message Schema {
  string _ref = 1;
  int64 min_length = 2;
  AdditionalPropertiesItem additional_properties = 3;
  string discriminator = 4;
  ItemsItem items = 5;
  bool unique_items = 6;
  repeated Any enum = 7;
  double multiple_of = 8;
  bool exclusive_maximum = 9;
  string format = 10;
  repeated string required = 11;
  int64 min_items = 12;
  int64 min_properties = 13;
  ExternalDocs external_docs = 14;
  TypeItem type = 15;
  string pattern = 16;
  Properties properties = 17;
  Xml xml = 18;
  double maximum = 19;
  int64 max_properties = 20;
  bool read_only = 21;
  double minimum = 22;
  Any default = 23;
  string description = 24;
  string title = 25;
  Any example = 26;
  int64 max_items = 27;
  repeated Schema all_of = 28;
  bool exclusive_minimum = 29;
  int64 max_length = 30;
  map<string, Any> vendor_extension = 31;
}

message SchemaItem {
  oneof oneof {
    Schema schema = 1;
    FileSchema file_schema = 2;
  }
}

message SecurityDefinitions {
  map<string, SecurityDefinitionsItem> additional_properties = 1;
}

message SecurityDefinitionsItem {
  oneof oneof {
    BasicAuthenticationSecurity basic_authentication_security = 1;
    ApiKeySecurity api_key_security = 2;
    Oauth2ImplicitSecurity oauth2_implicit_security = 3;
    Oauth2PasswordSecurity oauth2_password_security = 4;
    Oauth2ApplicationSecurity oauth2_application_security = 5;
    Oauth2AccessCodeSecurity oauth2_access_code_security = 6;
  }
}

message SecurityRequirement {
  map<string, StringArray> additional_properties = 1;
}

message StringArray {
  repeated string value = 1;
}

message Tag {
  string name = 1;
  string description = 2;
  ExternalDocs external_docs = 3;
  map<string, Any> vendor_extension = 4;
}

message TypeItem {
  repeated string value = 1;
}

message VendorExtension {
  map<string, Any> additional_properties = 1;
}

message Xml {
  string name = 1;
  string namespace = 2;
  string prefix = 3;
  bool attribute = 4;
  bool wrapped = 5;
  map<string, Any> vendor_extension = 6;
}

